Streamファイルの記述修正(varなしに修正)